--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -21,10 +21,15 @@
 color: black;
 }
 h3{
-  margin-left: 25%;
-  
-    
+  margin-left: 30%;
 }
+.signin-btn{
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}  
+    
+
 .login-btn{
     width: 100%;
   
@@ -42,6 +47,7 @@ h3{
     border: 2px Solid grey;
     
 }
-.toggle-btn:hover{
-   
+a{
+  margin-top: 1rem;
+  margin-left: 32%;
 }
