Added download button and premium feature

--- a/src/Components/Expense/ExpenseForm.css
+++ b/src/Components/Expense/ExpenseForm.css
@@ -41,7 +41,7 @@
 
 .premium{
     border: none;
-   background-color:darkmagenta; ;
+   background-color:black; ;
    padding: 1rem;
    margin-left: 40%;
    margin-top: 1em;
