--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -9,6 +9,7 @@
     padding-top: 2%;
     position: relative;
     box-shadow: 2px 2px 3px gainsboro;
+    background-color: white;
    
 }
 .form-div{
