--- a/src/Components/Login/Logout.css
+++ b/src/Components/Login/Logout.css
@@ -1,5 +1,30 @@
 .log-out{
-    position: absolute;
-    top:10px;
-    left:90%;
+   
+ border: none;
+   background-color:darkgray; 
+   padding: 0.5rem;
+   width: 10%;
+   border-radius: 2rem;
+   box-shadow: 3px 3px 4px gray;
+  
+}
+.themeToggle{
+    margin-right: 0.5rem;
+     border: none;
+   background-color:darkgray; 
+    padding: 0.5rem;
+    width: 5%;
+    border-radius: 2rem;
+    box-shadow: 3px 3px 4px gray
+   
+}
+.nav-btn{
+    display: flex;
+    flex-wrap: row-reverse;
+    justify-content: flex-end;
+    margin-right:2rem;
+    margin-top:1rem;
+}
+.themeIcon{
+    font-size: 1.5rem;
 }
